Changelog
=========

4.0-dev - (unreleased)
----------------------
 * Bugfix: Removed readiness portlet from left column [szabozo0 #4493]

 * TODO: fix "related policy document" button in specification aggedit 
 
 * Bugfix: Fixed wrong date formats [szabozo0 #4510]
 
 * Change: Migrated legacy left and right_slots portlets, created specific portlet manager renderer to display readiness portlet in top [szabozo0 #4493]
 
 * Change: removed the old themes portlet, now part of the main template as viewlet [demarant]

 * Change: Added Products.RedirectionTool profile in metadata.xml

 * Change: Included ManagementPlan Field and Widget from eea.forms instead of eea.dataservice [szabozo0 #4423]

 * Feature: Added upgrade steps
  [voineali #4392]

 * Feature: Plone 4.0.4 compatible release
  [tiberich #4214]


1.41 - (2011-05-20)
-------------------
 * Bug fix: references now also appear on Assessment view [ghicaale #4351]

1.40 - (2011-03-29)
-------------------
 * Change: cleaned package of pylint violations [ichimdav #4140]
 * Change: use portal_type when looking for files in assessment [tiberich #4135]
 * Bug fix: force decoding into unicode of Description for content types with autocomputed descriptions [tiberich]
 * Bug fix: added IValueProvider adapter for ManagementPlanField [tiberich #4222]

1.39 - (2011-03-08)
-------------------
 * Bug fix: commented under IndicatorFactSheet content type the usage of
     "unique_specification_code" validator as it is not defined [ghicaale #4174]

1.38 - (2011-02-24)
-------------------
 * Bug fix: decode to unicode the Description for content types with autocomputed value [tiberich #4164]

1.37 - (2011-02-10)
-------------------
 * Bug fix: made IndicatorFactSheets use the same IArchetype2Surf adapter as Specifications [tiberich #3982]

1.36 - (2011-02-04)
-------------------
 * Change: Minor changes to the overviews links in portlet refs #4045 [demarant]

1.35 - (2011-02-02)
-------------------