@@ -1,4 +1,4 @@
-$(document).ready(function () {
+jQuery(document).ready(function ($) {
     $(".not-ready-anchor").each(function(){
         var url = $(this).parent().find('a:first-child').next('a').attr('href') + '/portlet_readiness_live';
         $(this).qtip({content: {
